<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StoreGrades">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/storeGradeTitle"
            android:textSize="28sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/SubjectTextView"
                    android:text="Name" />

                <TextView
                    style="@style/SubjectTextView"
                    android:text="Class" />

                <TextView
                    style="@style/SubjectTextView"
                    android:layout_marginTop="16dp"
                    android:text="@string/subject1_name" />

                <TextView
                    style="@style/SubjectTextView"
                    android:layout_marginTop="18dp"
                    android:text="@string/subject2_name" />

                <TextView
                    style="@style/SubjectTextView"
                    android:layout_marginTop="20dp"
                    android:text="@string/subject3_name" />

                <TextView
                    style="@style/SubjectTextView"
                    android:layout_marginTop="22dp"
                    android:text="@string/subject4_name" />

                <TextView
                    style="@style/SubjectTextView"
                    android:layout_marginTop="20dp"
                    android:text="@string/subject5_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/std_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your name" />

                <EditText
                    android:id="@+id/std_class"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your class" />

                <EditText
                    android:id="@+id/std_subject1"
                    android:layout_width="match_parent"

                    android:layout_height="wrap_content"
                    android:hint="Enter maths no" />

                <EditText
                    android:id="@+id/std_subject2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter english no" />

                <EditText
                    android:id="@+id/std_subject3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter phy no" />

                <EditText
                    android:id="@+id/std_subject4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter urdu no" />

                <EditText
                    android:id="@+id/std_subject5"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter CS no" />


            </LinearLayout>
        </LinearLayout>


        <Button
            android:id="@+id/btn_addStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Add Student" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="checkInput"
            android:text="check" />
    </LinearLayout>


</ScrollView>